2006-01-16  Srinivasa Ragavan  <sragavan@novell.com>

	Fixes #324739
	* gui/e-calendar-view.c: (tooltip_grab),
	(e_calendar_view_get_tooltips):
	* gui/e-day-view.c: (e_day_view_convert_event_coords),
	(e_day_view_on_time_canvas_scroll), (tooltip_get_view_event),
	(tooltip_destroy), (e_day_view_on_text_item_event),
	(e_day_view_on_editing_stopped):
	* gui/e-week-view.c: (e_week_view_on_scroll), (tooltip_destroy),
	(tooltip_event_cb), (e_week_view_on_text_item_event),
	(e_week_view_on_editing_stopped):

2006-01-16  Chenthill Palanisamy  <pchenthill@novell.com>

	Patch submitted by Sebastien Bacher <seb128@debian.org>
	
	Fixes #325629
	* gui/alarm-notify/alarm-queue.c: (popup_notification): Use the new
	apis in libnotify.
	
2006-01-16 P S Chakravarthi <pchakravarthi@novell.com>

	Fixes #324816 #324889

	* gui/alarm-notify/alarm-queue.c : menu_item_toggle_callback :
	revised the code to use only e_source_group_add_source and
	e_source_group_remove_source alone to update gconf rather than
	explicit updating of the gconf xml
	[along with a patch in e-source-list.c]


2006-01-16 P S Chakravarthi <pchakravarthi@novell.com>

	Minor Feature: Reply and Reply all for calendar items of clients
	that support such facility (personal, exchange).

	* gui/e-cal-popup.[ch] : added a definition for
	E_CAL_POPUP_SELECT_NOSAVESCHEDULES which separates out calendar items
	of clients without the static capability of saving schedules.
	* gui/itip-utils.c:
	reply_to_calendar_comp (), html_new_lines_for (): added.
	comp_to_list (): added another boolean parameter called reply_all which
	indicates if reply to everyone is wanted or not.
	added code for E_CAL_COMPONENT_METHOD_REPLY
	itip_get_comp_attendee () : added code for E_CAL_COMPONENT_METHOD_REPLY
	comp_content_type () : added code for E_CAL_COMPONENT_METHOD_REPLY
	* gui/e-calendar-view.c on_reply (), on_reply_all (): added.
	modified E_CAL_POPUP_* menu items to include Reply and Reply All

