@@ -1,3 +1,11 @@
+2006-01-16  Harish Krishnaswamy  <kharish@novell.com>
+
+	* gui/calendar-component.c: (impl__get_userCreatableItems):
+	* gui/memos-component.c: (impl__get_userCreatableItems):
+	* gui/tasks-component.c: (impl__get_userCreatableItems):
+	remove shortcut keys (UI Hackfest -
+	See http://go-evolution.org/Shortcut_Keys_Review).
+
 2006-01-16  Srinivasa Ragavan  <sragavan@novell.com>
 
 	Fixes #324739
